--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "deploy": "ng build --configuration production --base-href=/2022_01-ci-di-my-angular-realpalmy/ && cp ./dist/my-angular/index.html ./dist/my-angular/404.html && gh-pages -d ./dist/my-angular",
-    "test": "ng test"
+    "test": "ng test",
+    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
