--- a/.github/workflows/feature-release.yml
+++ b/.github/workflows/feature-release.yml
@@ -12,7 +12,7 @@ jobs:
     steps: 
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.RELEASE_TOKEN }}  
+          token: ${{ secrets.PUSH_MAIN }}  
       - uses: actions/setup-node@v3
         with:
           node-version: "16" 
