--- a/.github/workflows/feature-release.yml
+++ b/.github/workflows/feature-release.yml
@@ -34,11 +34,11 @@ jobs:
         run: npx ng build --configuration production --base-href="/${{ github.event.repository.name }}/"
       - name: Test Project
         run: yarn run test:ci
-      - name: Merge to main
+      - name: Merge to master
         run: |
           git fetch --unshallow
-          git checkout main
+          git checkout master
           git merge ${{ env.BRANCH_NAME }}
           git push origin main
           git tag -a ${{ env.BRANCH_NAME }} -m "my version ${{ env.BRANCH_NAME }}"
-          git push origin main --tags
+          git push origin master --tags
