--- a/.github/workflows/feature-01.yml
+++ b/.github/workflows/feature-01.yml
@@ -2,7 +2,7 @@ name: feature-01 CI
 run-name: ${{ github.actor }} is feature
 on:
   push: 
-    branchs: 
+    branches: 
       - feature-01
 jobs: 
   ci-feature-01: 
